--- a/OnlineFetva-ear/pom.xml
+++ b/OnlineFetva-ear/pom.xml
@@ -34,23 +34,26 @@
                 <artifactId>maven-ear-plugin</artifactId>
                 <version>2.8</version>
                 <configuration>
-                    <version>6</version>
+                    <modules>
+                        <ejbModule>
+                            <groupId>com.foxcon.fetva</groupId>
+                            <artifactId>OnlineFetva-ejb</artifactId>
+                        </ejbModule>
+                        <jarModule>
+                            <groupId>com.foxcon.fetva</groupId>
+                            <artifactId>OnlineFetva-ejb-client</artifactId>
+                        </jarModule>
+                    </modules>
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
+                    
                 </configuration>
             </plugin>
         </plugins>
     </build>
-    <repositories>
-        <repository>
-			<id>oss.sonatype.org</id>
-			<name>OSS Sonatype Staging</name>
-			<url>https://oss.sonatype.org/content/groups/staging</url>
-		</repository>
-        
-    </repositories>
+   
     <dependencies>
         <dependency>
-            <groupId>com.mycompany</groupId>
+            <groupId>com.foxcon.fetva</groupId>
             <artifactId>OnlineFetva-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>ejb</type>
@@ -61,14 +64,6 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-        <dependency>
-            <groupId>com.mycompany</groupId>
-            <artifactId>OnlineFetva-web</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-       
-        
         
     </dependencies>
 </project>
