--- a/OnlineFetva-ejb-client/pom.xml
+++ b/OnlineFetva-ejb-client/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.foxcon.fetva</groupId>
     <artifactId>OnlineFetva-ejb-client</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>app-client</packaging>
+    <packaging>jar</packaging>
 
     <name>OnlineFetva-ejb-client</name>
 
@@ -86,31 +86,7 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.6</version>
-                <executions>
-                    <execution>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>copy</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${endorsed.dir}</outputDirectory>
-                            <silent>true</silent>
-                            <artifactItems>
-                                <artifactItem>
-                                    <groupId>javax</groupId>
-                                    <artifactId>javaee-endorsed-api</artifactId>
-                                    <version>7.0</version>
-                                    <type>jar</type>
-                                </artifactItem>
-                            </artifactItems>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+            
         </plugins>
     </build>
 
