PhotoService from online service

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /OnlineFetva-ejb/target/
 /OnlineFetva-web/target/
 /OnlineFetva-ear/target/
+/PhotoService-ear/target/
+/PhotoService-ejb/target/
+/PhotoService-web/target/
+/PhotoService-ejb-client/target/
