--- a/PhotoService-ejb-client/pom.xml
+++ b/PhotoService-ejb-client/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>OnlineFetva</artifactId>
-        <groupId>com.mycompany</groupId>
+        <artifactId>PhotoService</artifactId>
+        <groupId>com.fatih.satir</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.foxcon.fetva</groupId>
-    <artifactId>OnlineFetva-ejb-client</artifactId>
+    <groupId>com.fatih.satir</groupId>
+    <artifactId>PhotoService-ejb-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>OnlineFetva-ejb-client</name>
+    <name>PhotoService-ejb-client</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
