--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.mycompany</groupId>
-  <artifactId>OnlineFetva</artifactId>
+  <groupId>com.fatih.satir</groupId>
+  <artifactId>PhotoService</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>OnlineFetva</name>
+  <name>PhotoService</name>
   <modules>
-    <module>OnlineFetva-ear</module>
-    <module>OnlineFetva-web</module>
-    <module>OnlineFetva-ejb</module>
-    <module>OnlineFetva-ejb-client</module>
+    <module>PhotoService-ear</module>
+    <module>PhotoService-web</module>
+    <module>PhotoService-ejb</module>
+    <module>PhotoService-ejb-client</module>
   </modules>
+    <properties>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <maven.compiler.target>1.6</maven.compiler.target>
+    </properties>
 </project>
