Photo Service Twitter login eklenmeye çalışıldı

--- a/PhotoService-web/src/main/resources/shiro.ini
+++ b/PhotoService-web/src/main/resources/shiro.ini
@@ -1,5 +1,5 @@
 # =============================================================================
-# OnlineFetva INI configuration
+# PhotoService INI configuration
 #
 # Usernames/passwords are based on the classic Mel Brooks' film "Spaceballs" :)
 # =============================================================================
@@ -11,7 +11,7 @@
 
 
 [users]
-Abdurrahmant = 2818664, admin
+Abdurrahmant = 12345, admin
 SarıEjder = 2818664, contributer
 Bombaci = 2818664, observer
 
@@ -30,7 +30,7 @@ observer = observe:review
 # -----------------------------------------------------------------------------
 
 [main]
-user=com.fetva.filter.FacesAjaxAwareUserFilter
+user=com.fsatir.filter.FacesAjaxAwareUserFilter
 user.loginUrl =/login.jsf
 
 
