--- a/PhotoService-ear/pom.xml
+++ b/PhotoService-ear/pom.xml
@@ -64,6 +64,12 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>4.0.6</version>
+           <scope>compile</scope>
+       </dependency>
         
     </dependencies>
 </project>
