--- a/PhotoService-web/pom.xml
+++ b/PhotoService-web/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>5.3</version>
+            <version>6.0</version>
         </dependency>
         <dependency>
             <groupId>commons-fileupload</groupId>
@@ -35,6 +35,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.4</version>
         </dependency>
+        <dependency>
+    <groupId>org.glassfish.jersey.media</groupId>
+    <artifactId>jersey-media-multipart</artifactId>
+    <version>2.17</version> 
+</dependency>
 
         <dependency>
             <groupId>javax</groupId>
@@ -79,6 +84,11 @@
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>4.0.6</version>
         </dependency>
         
     </dependencies>
