Shiro eksik olan kullanıcı eklendi

--- a/PhotoService-web/src/main/resources/shiro.ini
+++ b/PhotoService-web/src/main/resources/shiro.ini
@@ -11,6 +11,7 @@
 
 
 [users]
+Abdurrahman = 12345, admin
 Abdurrahmant = 12345, admin
 SarıEjder = 2818664, contributer
 Bombaci = 2818664, observer
