--- a/PhotoService-web/src/main/webapp/WEB-INF/web.xml
+++ b/PhotoService-web/src/main/webapp/WEB-INF/web.xml
@@ -24,7 +24,7 @@
         <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
         <init-param>
             <param-name>uploadDirectory</param-name>
-            <param-value>/uploads</param-value>
+            <param-value>/Users/abdurrahmanturkeri/uploads</param-value>
         </init-param>
     </filter>
     <filter-mapping>
